# Oracle-MCP

./: LICENSE  README.md  main.py  pyproject.toml  server.py
