[project]
name = "oracle-mcp"
version = "0.1.0"
description = "Oracle communication bus MCP server for Rhode — oracle calls, subagent messaging, and inter-level communication."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.scripts]
oracle-mcp = "server:main"
